# feature_store

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci_cd.yml
docs/: API.md  CI_CD.md  api_client.md  api_index.md  api_registry.md  api_schema.md  api_storage.md  api_types.md  overview.md
docs/examples/: feature_view.yaml  label.yaml  old_model_feature.yaml
docs/superpowers/plans/: 2026-05-10-checkpoint-autoregister-plan.md  2026-05-10-docs-cicd-plan.md  2026-05-10-feature-store-refactor-plan.md  2026-05-11-docs-reorganization-plan.md
docs/superpowers/specs/: 2026-05-10-checkpoint-autoregister-design.md  2026-05-10-docs-cicd-design.md  2026-05-10-feature-store-refactor-design.md  2026-05-11-docs-reorganization-design.md
scripts/: build.py
src/feature_store/: __init__.py  client.py  registry.py  schema.py  storage.py  types.py
tests/: conftest.py  test_client.py  test_migration.py  test_registry.py  test_schema.py  test_storage.py  test_types.py
tests/fixtures/new_format/: feature_view.yaml  label.yaml  model_feature.yaml
tests/fixtures/old_format/: feature_view.yaml  label.yaml  model_feature.yaml
