[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "feature_store"
version = "2.0.0"
description = "Feature Store client with YAML-based registry"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5",
    "pyyaml>=6.0",
    "fsspec>=2023.0",
    "gcsfs>=2023.0",
    "google-cloud-storage>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyspark>=3.3",
]

[tool.setuptools.packages.find]
where = ["src"]
